# pyamtrak

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
src/pyamtrak/: __init__.py  app.py  crypto.py  dateutil.py  routes.py  stations.py  trains.py
src/pyamtrak/templates/: base.html  index.html  route_detail.html  routes.html  stations.html  train_detail.html  trains.html
tests/: test_crypto.py
